# crc-metaprogramming

./: CMakeLists.txt  README.md
backup/: CRC_meta.dsp  CRC_meta.dsw
src/: CRC.h  main.cpp
